--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .primary-bg {
-    background-color: #FFC107;
+    background-color: #FFC107 !important;
 }
 
 .primary-button {
@@ -42,6 +42,7 @@ body {
     line-height: 26px;
     padding: 14px 28px;
     background-color: #FFC107;
+    border: 2px solid #fff;
     color: #000;
     border-radius: 6px;
     text-decoration: none;
@@ -95,6 +96,22 @@ body {
     color: #00D94A !important;
     margin-right: 5px;
 }
+.primary-button i.fa-arrow-right {
+    margin-left: 7px;
+    transform: rotate(-45deg);
+}
+.solid-theme-btn{
+    padding: 8px 24px;
+    background: rgba(255, 193, 7, 0.1);
+    border-radius: 8px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #282829;
+    text-decoration: none;
+}
 /* Default css END */
 
 
@@ -104,7 +121,7 @@ body {
     position: absolute;
     content: '';
     width: 100%;
-    top: 56px;
+    top: 70px;
     left: 0;
     z-index: 1;
 }
@@ -128,7 +145,45 @@ body {
     width: 35px;
     border-radius: 50%;
 }
-
+.call-us {
+    position: absolute;
+    content: '';
+    width: auto;
+    height: 90px;
+    right: 0;
+    top: 0;
+    padding: 44px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.call-us h6 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.single-nav-item a.nav-link {
+    color: #fff;
+    border: 2px solid #fff;
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 46px;
+}
+ul.dropdown-menu.search-dropdown {
+    width: 300px;
+    padding: 14px;
+    margin-top: 15px;
+}
+a.nav-link.text-white.active {
+    color: #FFC107 !important;
+    border-bottom: 2px solid #FFC107;
+    font-weight: bold;
+}
 /* Header section css END */
 
 /* =========================================
@@ -146,10 +201,6 @@ body {
     background-position: right;
 }
 
-.hero-b-content-wrap i{
-    color: #14BD3A !important;
-    margin-right: 5px;
-}
 /* Hero section END./ */
 
 
@@ -158,7 +209,10 @@ body {
 .why-choose-img-wrap {
     position: relative;
 }
-
+.why-choose-wrapper{
+    position: relative;
+    padding-top: 80px !important;
+}
 .why-choose-img-wrap:after {
     position: absolute;
     content: '';
@@ -227,6 +281,22 @@ body {
     display: table;
     margin: 0 auto;
 }
+.video-content-wrap img{
+    animation: blink 1s linear infinite;
+}
+@keyframes blink {
+    0% {
+        opacity: .3;
+    }
+
+    50% {
+        opacity: .5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 /* video Section END */
 
 /* =========================================
@@ -272,14 +342,72 @@ span.swiper-pagination-bullet {
     background: #282829;
     opacity: 0.3;
 }
+section.testimonials-wrapper {
+    position: relative;
+    margin-top: 80px;
+    z-index: 1;
+}
+
 /* testimonials Section END */
 
+/* =========================================
+==================== faq Section Start ======================== */
+.faq-wrapper {
+    position: relative;
+    background-image: url('./img/faq-bg.png');
+    background-repeat: no-repeat;
+    background-size: inherit;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    margin-top: 80px;
+}
+button.accordion-button {
+    background: #fff;
+    border: 1px solid #D9D9D9;
+    border-radius: 8px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 32px;
+    padding: 16px 24px;
+}
+.accordion-item.mb-3 {
+    border-radius: 8px;
+    overflow: hidden;
+}
+.accordion-header {
+    margin-bottom: 0;
+    border: none !important;
+}
+.accordion-button:not(.collapsed) {
+    background: rgba(255, 193, 7, 0.05) !important;
+    border: none;
+    color: #000 !important;
+}
+.accordion-collapse.collapse.show{
+    background: rgba(255, 193, 7, 0.05) !important;
+}
+.accordion-button:focus{
+    /* box-shadow: none !important; */
+}
+/* faq Section END */
 
-
-
-
-
-
+/* =========================================
+==================== Footer Section Start ======================== */
+footer.footer-wrapper {
+    position: relative;
+    padding: 80px 0;
+    margin-top: 80px;
+}
+.subscribe-from-wrap .input-group {
+    position: relative;
+    height: 44px;
+}
+.subscribe-from-wrap button {
+    color: #000;
+}
+/* Footer Section END */
 
 
 
